--- a/css/styles.css
+++ b/css/styles.css
@@ -360,3 +360,15 @@ header > form {
     padding-left:2px;
     width: 20px;
 }
+.Jyoti Prakash {
+  padding: 7% 15%;
+  background-color: rgba(138, 34, 242, 0.8);
+  text-align: center;
+}
+#Jyoti Prakash {
+  font-family: "tahoma";
+}
+#Jyoti Prakash {
+  font-family: "Montserrat";
+  line-height: 2;
+}
